--- a/Spring and Hibernate/Spring boot and thymleaf/rest-with-thymleaf/src/main/resources/templates/employee-form.html
+++ b/Spring and Hibernate/Spring boot and thymleaf/rest-with-thymleaf/src/main/resources/templates/employee-form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymleaf-extras-springsecurity5">
 
 <head>
     <!-- Required meta tags -->
