--- a/Spring and Hibernate/Spring boot and thymleaf/rest-with-thymleaf/src/main/resources/templates/list-employees.html
+++ b/Spring and Hibernate/Spring boot and thymleaf/rest-with-thymleaf/src/main/resources/templates/list-employees.html
@@ -1,5 +1,6 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymleaf-extras-springsecurity5">
 
 <head>
     <!-- Required meta tags -->
@@ -16,6 +17,8 @@
 
 <div class="container">
 
+    <h3 th:inline="text">Welcome [[${#httpServletRequest.remoteUser}]]</h3>
+
     <h3>Employee Directory</h3>
     <hr>
     <a th:href="@{/api/employees/showFormForAdd}"
@@ -28,7 +31,9 @@
             <th>First Name</th>
             <th>Last Name</th>
             <th>Email</th>
-            <th>Action</th>
+            <div sec:authorize="hasRole('ADMIN')">
+               <th>Action</th>
+            </div>
         </tr>
         </thead>
 
@@ -38,6 +43,8 @@
             <td th:text="${tempEmployee.firstName}" />
             <td th:text="${tempEmployee.lastName}" />
             <td th:text="${tempEmployee.email}" />
+
+            <div sec:authorize="hasRole('ADMIN')">
 
             <td>
                 <div class="row">
@@ -67,11 +74,16 @@
                 </div>
             </td>
 
+            </div>
+
 
         </tr>
         </tbody>
     </table>
 
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Logout" />
+    </form>
 </div>
 
 </body>
